tests/frontend/fail/invalid_transpose.vx
// RUN: ! vxc %s

fn main() {
    let a: Tensor<f32, [128, 128]> = 1.0;
    
    // Fails because permutation has duplicates
    let b = a.transpose([0, 0]);
}
